--- a/panchikawatta/pubspec.yaml
+++ b/panchikawatta/pubspec.yaml
@@ -2,7 +2,7 @@ name: panchikawatta
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.3.0 <4.0.0'
+  sdk: ">=3.3.0 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,13 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  intl: ^0.17.0
   image_picker: ^0.8.4+2
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  http: any
+  shared_preferences: any
+  fluttertoast: any
+  firebase_core: ^2.4.1
+  cloud_firestore: ^4.17.3
+  firebase_auth: ^4.19.5
+  firebase_storage: ^11.7.5
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +60,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -62,12 +67,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-  - lib\src\img\orange logo 1.png
-  - lib\src\img\profile.png
-  - lib\src\img\uploadicon.png
-  - lib\src\img\Whitelogo2.png
-  - lib\src\img\vehicleDetails.jpeg
-  - lib\src\img\Success.png
+    - lib\src\img\orange logo 1.png
+    - lib\src\img\profile.png
+    - lib\src\img\uploadicon.png
+    - lib\src\img\Whitelogo2.png
+    - lib\src\img\vehicleDetails.jpeg
+    - lib\src\img\Success.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
