--- a/panchikawatta/pubspec.yaml
+++ b/panchikawatta/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   #Initializing firebase
   firebase_core: ^2.31.0
   http: ^1.2.1
+  fluttertoast: ^8.2.5
+  image_picker: ^1.1.1
 
 dev_dependencies:
   flutter_test:
