--- a/panchikawatta/pubspec.yaml
+++ b/panchikawatta/pubspec.yaml
@@ -31,12 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #firebase authentication package for user authentication.
+  firebase_auth: ^4.20.0
+  #Initializing firebase
+  firebase_core: ^2.32.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  #Initializing firebase
-  firebase_core: ^2.31.0
   http: ^1.2.1
   fluttertoast: ^8.2.5
   image_picker: ^1.1.1
