--- a/panchikawatta/pubspec.yaml
+++ b/panchikawatta/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  image_picker: ^0.8.4+4
+  image_picker: ^1.1.2
 
 
 dev_dependencies:
@@ -22,6 +22,14 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  assets:
-    - check_engine.jpg
-    - seat_belt.png
+  # assets:
+    # - assets/warning_lights/oil.jpg
+    # - assets/warning_lights/abs.jpg
+    # - assets/warning_lights/brake.jpg
+    # - assets/warning_lights/engine_temp.jpg
+    # - assets/warning_lights/power_steering.jpg
+    # - assets/warning_lights/security.jpg
+    # - assets/warning_lights/tpms.jpg
+    # - assets/warning_lights/washer_fluid.jpg
+    # - assets/warning_lights/check_engine.jpg
+    # - assets/warning_lights/seat_belt.jpg
