--- a/panchikawatta/pubspec.yaml
+++ b/panchikawatta/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   card_swiper: ^3.0.1
   flutter_otp_text_field: ^1.1.3+2
   carousel_slider: ^4.2.1
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
