--- a/panchikawatta/pubspec.yaml
+++ b/panchikawatta/pubspec.yaml
@@ -53,10 +53,8 @@ dependencies:
   http: any
   shared_preferences: any
   fluttertoast: any
-  # firebase_core: ^2.4.1
-  # cloud_firestore: ^4.17.3
-  # firebase_auth: ^4.19.5
-  # firebase_storage: ^11.7.5
+  #For save the email address 
+  #shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
